1 adding endpoints (#2)
* added individual query

* modified:   routes/stats/stats.router.js

* added the individual route, helmet updated docker
